--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@monaco-editor/react": "^4.7.0",
     "axios": "^1.13.2",
+    "commit": "^0.0.4",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
+    "git": "^0.1.5",
+    "lucide-react": "^0.561.0",
+    "main": "^1000.0.1",
+    "origin": "^0.5.8",
+    "push": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
