--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,5 @@
+# Backend API URL
 VITE_API_URL=http://localhost:3000
+
+# Google Gemini AI API Key
+VITE_GEMINI_API_KEY=AIzaSyCk7v9spUdCGeT9P1Blfopia1_Brc9lb08
