--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,9 @@ JWT_EXPIRES_IN=7d
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
 
+# Google Gemini AI
+GEMINI_API_KEY=your-gemini-api-key-here
+
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
