--- a/firebase.json
+++ b/firebase.json
@@ -43,5 +43,9 @@
         ],
         "cleanUrls": true,
         "trailingSlash": false
+    },
+    "firestore": {
+        "rules": "firestore.rules",
+        "indexes": "firestore.indexes.json"
     }
 }
