--- a/package.json
+++ b/package.json
@@ -15,19 +15,26 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@monaco-editor/react": "^4.7.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@types/three": "^0.182.0",
     "axios": "^1.13.2",
     "commit": "^0.0.4",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.26.2",
     "git": "^0.1.5",
     "lucide-react": "^0.561.0",
     "main": "^1000.0.1",
     "origin": "^0.5.8",
+    "postprocessing": "^6.38.2",
     "push": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
     "socket.io-client": "^4.8.1",
+    "three": "^0.182.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
