--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 node_modules/
-.env
 dist/
-.vscode/
+.env*
+.firebase/
+firebase-debug.log*
 .DS_Store
+.vscode/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+build/
 
